src/test/deca/extension/context/invalid/test_mauvaise_initialisation.deca
// Description:
// Test la mauvaise déclaration
// les types possible sont int, float, boolean et Object par 
// défaut
// Resultats: 
//  TEST pas valide contextuelement
// Historique:
//    cree le 01/01/2023



{
    float[][] tableauFloat = new badtype[3][5];
}
